Basics of the spring boot and spring data JPA with RestFul API's

--- a/learning-spring/src/main/resources/static/index.html
+++ b/learning-spring/src/main/resources/static/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
     <h1>Welcome to Landon Hotel</h1>
+    <div>
+		Reservations:
+		<a href="/reservations">Room Reservations</a>
+		
+	</div>
 </body>
 </html>
